manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-svc
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 4000
    protocol: "TCP"
  selector:
    app: node-app
